--- a/exercicios/ex022/fundo01.html
+++ b/exercicios/ex022/fundo01.html
@@ -4,12 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testando Fundos</title>
+    <title>Testando de Imagens de Fundos</title>
     <style>
-        
+        body{
+            background-image: url('fundos/pattern003.png');
+        }
+       div.quadrada{
+           display: inline-block;
+           border: 1px solid black;
+           border-radius: 10px;
+           background-color:lightgray;
+           width: 100px;
+           height: 100px;
+       }
+       div#q1 {
+          background-color: aqua;
+       }
+       div#q2 {
+           background-image:linear-gradient(to bottom, yellow,red);
+
+       }
+       div#q3 {
+           background-image: url('fundos/pattern001.png')
+
+       }
     </style>
 </head>
 <body>
-    
+    <div class="quadrada" id="q1">
+
+    </div>
+    <div class="quadrada" id="q2">
+
+    </div>
+    <div class="quadrada" id="q3">
+
+    </div>
 </body>
 </html>
