--- a/exercicios/ex022/fundo06.html
+++ b/exercicios/ex022/fundo06.html
@@ -4,27 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fundo fixo de tela</title>
+    <title>Teste de imagens de Fundo</title>
     <style>
         body{
-            /*
-            background-color:gray;
-            background-image:url('fundos/wallpaper002.jpg');
+           /* height: 100vh;
+            background-color: black;
+            background-image: url('fundos/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
-             */
-            background: black url('fundos/wallpaper002.jpg') center center no-repeat fixed;
-
-            background-size: cover;
+            background-attachment: fixed; */
+             background: black url('fundos/wallpaper002.jpg') center center no-repeat fixed;
+              background-size: cover;
         }
         main{
-            height:100vh;
             background-color:white;
             width:400px;
             padding:10px;
-            margin: auto;
-            border:1px solid darkblue ;
+            margin:auto;
+            border:1px solid black;
             border-radius: 10px;
         }
     </style>
@@ -32,7 +30,10 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem molestiae minus provident voluptas reprehenderit laboriosam earum asperiores. Atque ea nemo odio at repellat vitae obcaecati, facilis fugit culpa nam numquam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam earum saepe cumque vero voluptates error exercitationem, sunt natus eligendi animi ex nemo voluptatibus nam veniam reiciendis ipsum illo doloribus iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quo sunt voluptas deserunt ipsum illum sint beatae molestias voluptatibus delectus accusantium minima, at recusandae facilis? Ipsam illum obcaecati laboriosam quisquam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi magnam ut ipsam reprehenderit, veritatis quia quas debitis earum architecto dolore a iusto ad voluptatum omnis molestiae ea voluptatibus, possimus non? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis id deleniti dolores ducimus odio animi pariatur rem placeat repudiandae obcaecati dolorum consequatur sequi, excepturi nemo voluptates! Optio id deleniti cumque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi accusamus error porro mollitia vitae sed est optio inventore neque harum velit, nisi blanditiis molestias ad ea provident aspernatur illo nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi temporibus, vel voluptate voluptatibus dolores, porro nisi autem maxime magni officia, quas repellendus sint aut. Placeat nemo amet modi possimus molestiae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus architecto aliquid exercitationem temporibus sequi facilis facere dolores, quo repellat quam atque, eaque, impedit dignissimos! Illo necessitatibus repellat sed placeat nobis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores fugit in ad reprehenderit quis sequi mollitia, aliquam consequatur recusandae. Sapiente obcaecati, dolore magni perferendis consequuntur in explicabo voluptate quas quae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quia, asperiores nihil nobis quisquam odit explicabo enim excepturi eum eaque. Tempore aperiam optio quisquam sint at animi sapiente, dolorum cum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium laboriosam iusto animi suscipit in temporibus eaque harum natus nulla? Sint libero animi saepe iusto labore architecto minus sequi praesentium aliquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi maxime aut at quam dolor sit incidunt repellendus ut, ipsa laboriosam exercitationem voluptas dolores molestias itaque quidem ab eligendi atque modi!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti velit vitae nisi quia tempora eius ducimus suscipit, qui, id hic ipsa odio? Obcaecati enim sint inventore cupiditate possimus? Voluptatum, tempore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus dicta, ipsam culpa quam autem saepe quisquam commodi! Incidunt, voluptate eum dolor possimus libero aliquam nulla, excepturi cum, impedit labore tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas velit vero assumenda minus laudantium consequuntur iure ducimus iusto, expedita suscipit vitae nostrum saepe in magnam alias numquam rerum voluptatem reprehenderit. </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti velit vitae nisi quia tempora eius ducimus suscipit, qui, id hic ipsa odio? Obcaecati enim sint inventore cupiditate possimus? Voluptatum, tempore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus dicta, ipsam culpa quam autem saepe quisquam commodi! Incidunt, voluptate eum dolor possimus libero aliquam nulla, excepturi cum, impedit labore tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas velit vero assumenda minus laudantium consequuntur iure ducimus iusto, expedita suscipit vitae nostrum saepe in magnam alias numquam rerum voluptatem reprehenderit. </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti velit vitae nisi quia tempora eius ducimus suscipit, qui, id hic ipsa odio? Obcaecati enim sint inventore cupiditate possimus? Voluptatum, tempore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus dicta, ipsam culpa quam autem saepe quisquam commodi! Incidunt, voluptate eum dolor possimus libero aliquam nulla, excepturi cum, impedit labore tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas velit vero assumenda minus laudantium consequuntur iure ducimus iusto, expedita suscipit vitae nostrum saepe in magnam alias numquam rerum voluptatem reprehenderit. </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti velit vitae nisi quia tempora eius ducimus suscipit, qui, id hic ipsa odio? Obcaecati enim sint inventore cupiditate possimus? Voluptatum, tempore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus dicta, ipsam culpa quam autem saepe quisquam commodi! Incidunt, voluptate eum dolor possimus libero aliquam nulla, excepturi cum, impedit labore tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas velit vero assumenda minus laudantium consequuntur iure ducimus iusto, expedita suscipit vitae nostrum saepe in magnam alias numquam rerum voluptatem reprehenderit. </p>
     </main>
 </body>
 </html>
