--- a/exercicios/ex023 tabelas/tabela03.html
+++ b/exercicios/ex023 tabelas/tabela03.html
@@ -12,14 +12,33 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td,th{
             border: 1px solid black;
             padding:10px;
         }
+        caption{
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color:lightgray; 
+        }
         thead,tfoot{
-            background-color:gray;
+            background-color:rgb(54, 54, 54);
             color:white;
+        }
+        thead > tr > th{
+            position:sticky;
+            top:-1px;
+            background-color:rgb(54, 54, 54);
+        }
+
+        tbody > tr:nth-child(odd){
+            background-color:lightgray;
+        }
+        tbody > tr:nth-child(even){
+            background-color:white;
         }
         td.num{
             text-align:right;
@@ -28,11 +47,27 @@
 </head>
 <body>
    <h1>Uso de tabelas grandes</h1> 
+   <!--Anatomia de tabelas grandes
+
+        TABLE
+
+           CAPTION
+
+           THEAD
+              TR, TD, TH
+
+           TBODY
+              TR,TD,TH
+
+           TFOOT
+              TR,TD,TH
+            -->
    <table>
+       <caption>População das Unidades Federativas</caption>
        <thead>
            <tr>
-               <th>Estado</th>
-               <th>População</th>
+               <th scope="col">Estado</th>
+               <th scope="col" style="width:50px;">População</th>
            </tr>
        </thead>
        <tbody>
@@ -99,58 +134,71 @@
            <tr>
                <td>Mato Grosso</td>
                <td class="num">3 567 234</td>
-        </tr>
-        <tr>
-            <td>Rio Grande do Norte</td>
-            <td class="num">3 560 903</td>
-        </tr>
-        <tr>
-            <td>Alagoas</td>
-            <td class="num">3 365 351</td>
-        </tr>
-        <tr>
-            <td>Piauí</td>
-            <td class="num">3 289 290</td>
-        </tr>
-        <tr>
-            <td>Distrito Federal</td>
-            <td class="num">3 094 325</td>
-        </tr>
-        <tr>
-            <td>Mato Grosso do Sul</td>
-            <td class="num">2 839 188</td>
-        </tr>
-        <tr>
-            <td>Sergipe</td>
-            <td class="num">2 338 474</td>
-        </tr>
-        <tr>
-            <td>Rondônia</td>
-            <td class="num">1 815 278</td>
-        </tr>
-        <tr>
-            <td>Tocantins</td>
-            <td class="num">1 607 363</td>
-        </tr>
-        <tr>
-            <td>Acre</td>
-            <td class="num">906 876</td>
-        </tr>
-        <tr>
-            <td>Amapá</td>
-            <td class="num">877 613</td>
-        </tr>
-        <tr>
-            <td>Roraima</td>
-            <td class="num">652 713</td>
-        </tr>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="num">3 560 903</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">3 365 351</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num">3 289 290</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="num">3 094 325</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num">2 839 188</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td class="num">2 338 474</td>
+            </tr>
+            <tr>
+                <td>Rondônia</td>
+                <td class="num">1 815 278</td>
+            </tr>
+            <tr>
+                <td>Tocantins</td>
+                <td class="num">1 607 363</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td class="num">906 876</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="num">877 613</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td class="num">652 713</td>
+            </tr>
        </tbody>
        <tfoot>
            <tr>
-               <th>Total de Habitantes</th>
+               <th scope="row">Total de Habitantes</th>
                <td class="num"><strong>214.345.428</strong></td>
            </tr>
        </tfoot>
    </table>
+
+   <p>
+       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia fuga nihil, repellat earum vitae soluta quaerat architecto. Voluptates porro consequatur illum voluptatem numquam facilis, dolores officiis? Cum libero eligendi voluptatem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, dolores neque facere et beatae tempore accusamus itaque atque iusto, dolorem tempora voluptatum? Nihil minus, autem asperiores porro repellat sunt eum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet provident dignissimos atque, harum natus cupiditate modi beatae, repudiandae error consectetur quae, totam architecto dolor animi sapiente aut maxime obcaecati ipsa? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ullam quia soluta! Ratione eos necessitatibus consequatur magnam beatae eum architecto! Libero ratione dolor natus voluptatum maxime iusto repellendus minima. Debitis.
+   </p>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia fuga nihil, repellat earum vitae soluta quaerat architecto. Voluptates porro consequatur illum voluptatem numquam facilis, dolores officiis? Cum libero eligendi voluptatem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, dolores neque facere et beatae tempore accusamus itaque atque iusto, dolorem tempora voluptatum? Nihil minus, autem asperiores porro repellat sunt eum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet provident dignissimos atque, harum natus cupiditate modi beatae, repudiandae error consectetur quae, totam architecto dolor animi sapiente aut maxime obcaecati ipsa? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ullam quia soluta! Ratione eos necessitatibus consequatur magnam beatae eum architecto! Libero ratione dolor natus voluptatum maxime iusto repellendus minima. Debitis.
+    </p>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia fuga nihil, repellat earum vitae soluta quaerat architecto. Voluptates porro consequatur illum voluptatem numquam facilis, dolores officiis? Cum libero eligendi voluptatem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, dolores neque facere et beatae tempore accusamus itaque atque iusto, dolorem tempora voluptatum? Nihil minus, autem asperiores porro repellat sunt eum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet provident dignissimos atque, harum natus cupiditate modi beatae, repudiandae error consectetur quae, totam architecto dolor animi sapiente aut maxime obcaecati ipsa? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ullam quia soluta! Ratione eos necessitatibus consequatur magnam beatae eum architecto! Libero ratione dolor natus voluptatum maxime iusto repellendus minima. Debitis.
+    </p>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia fuga nihil, repellat earum vitae soluta quaerat architecto. Voluptates porro consequatur illum voluptatem numquam facilis, dolores officiis? Cum libero eligendi voluptatem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, dolores neque facere et beatae tempore accusamus itaque atque iusto, dolorem tempora voluptatum? Nihil minus, autem asperiores porro repellat sunt eum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet provident dignissimos atque, harum natus cupiditate modi beatae, repudiandae error consectetur quae, totam architecto dolor animi sapiente aut maxime obcaecati ipsa? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ullam quia soluta! Ratione eos necessitatibus consequatur magnam beatae eum architecto! Libero ratione dolor natus voluptatum maxime iusto repellendus minima. Debitis.
+    </p>
 </body>
 </html>
