--- a/exercicios/ex023 tabelas/desafio03.html
+++ b/exercicios/ex023 tabelas/desafio03.html
@@ -14,10 +14,14 @@
            border-collapse: collapse;
           
         }
+        caption{
+            font-size: 1.3em;
+            font-weight: bold;
+            padding:10px;
+        }
         thead{
             background-color:gray;
             color:white;
-            font-weight: bold;
             text-align:center;
     
         }
@@ -36,16 +40,17 @@
 <body>
     <h1>Tabela Completa</h1>
     <table>
+        <caption>Filmes Favoritos</caption>
         <thead>
             <tr>
-                <td scope="row">grupo</td>
-                <td scope="row">Nomes</td>
-                <td colspan="3" scope="row">Filmes</td>
+                <th scope="row">grupo</th>
+                <th scope="row">Nomes</th>
+                <th colspan="3" scope="rowgroup">Filmes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th rowspan="3" scope="col" id="m">Mulheres</th>
+                <th rowspan="3" scope="rowgroup" id="m">Mulheres</th>
                  <td>Ana Maria</td>
                  <td>Alien</td>
                  <td>Rambo</td>
@@ -64,7 +69,7 @@
                 <td>Big Hero</td>
             </tr>
             <tr>
-                <th rowspan="3" scope="col" id="h">Homens</th>
+                <th rowspan="3" scope="rowgroup" id="h">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Amnésia</td>
